# sigmatodo

./: .gitignore  CMakeLists.txt  README.md
cpp-sqlitelib/include/: sqlite.hpp  sqlitelib.h
resources/components/: project.html  projectdetails.html  projectform.html  task.html  taskdetails.html  taskform.html
resources/static/js/: devrefresh.js
resources/static/style/: fancy.css
resources/views/: 404.html  common.html  formecho.html  homepage.html  projectcreate.html  projectdetails.html  projectedit.html  projecttasks.html  projtaskcreate.html  task.html  taskcreate.html  taskdetails.html  taskedit.html
src/: main.cpp
src/app/: TodoApp.cpp  TodoApp.hpp
src/components/: Component.hpp  DictComponent.cpp  DictComponent.hpp  ForEachComponent.hpp  PlaintextComponent.cpp  PlaintextComponent.hpp  SubviewComponent.cpp  SubviewComponent.hpp  TemplatedComponent.hpp  TextFileComponent.cpp  TextFileComponent.hpp  components.hpp
src/components/templated/: ProjectComponent.cpp  ProjectComponent.hpp  ProjectDetailsComponent.cpp  ProjectDetailsComponent.hpp  ProjectFormComponent.cpp  ProjectFormComponent.hpp  TaskComponent.cpp  TaskComponent.hpp  TaskDetailsComponent.cpp  TaskDetailsComponent.hpp  TaskFormComponent.cpp  TaskFormComponent.hpp
src/dto/: dto.hpp
src/entities/: Note.hpp  Project.hpp  Task.hpp
src/fs/: DirWatcher.cpp  DirWatcher.hpp  FileCache.cpp  FileCache.hpp  StringSource.cpp  StringSource.hpp
src/svc/: ProjectService.cpp  ProjectService.hpp  TaskService.cpp  TaskService.hpp
src/time/: Time.cpp  Time.hpp
src/util/: FormDataParser.cpp  FormDataParser.hpp
src/view/: HTMLView.cpp  HTMLView.hpp
